// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre el componentes de Gif Expert App Debe coincidir con el Snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas sobre el componentes de Gif Expert App Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="OPM"
      key="OPM"
    />
    <GifGrid
      category="DB"
      key="DB"
    />
  </ol>
</Fragment>
`;
